add links to sidebar

--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                 </div>
                 <hr>
                 <div class="sidebar-askAlex">
-                    <p>Ask Alex</p>
+                    <a href= "ask-alex.html"><p>Ask Alex</p></a>
                 </div>
                 <hr>
                 <div class="sidebar-aboutOil">
-                    <p>About The Oil</p>
+                     <a href= "oil.html"><p>About The Oil</p></a>
                 </div>
                 <hr>
                 <div class="sidebar-journey">
@@ -284,8 +284,8 @@
         <h3>Archives Head to Toe</h3>
         <div class="row">
             <div class="col archive-post">
-                <img src="images/posts/hair-toe/hairtoe-post1-archive.png" alt="">
-                <h2>Title of Post</h2>
+               <a href="hair-to-toe-post.html"> <img src="images/posts/hair-toe/hairtoe-post1-archive.png" alt="">
+                   <h2>Title of Post</h2></a>
             </div>
             <div class="col archive-post">
                 <img src="images/posts/hair-toe/post2/post2-archives.png" alt="">
@@ -333,16 +333,16 @@
             <div class="col footer-nav cols-footer">
                 <ul class="">
                     <li class=""">
-                        <a class="active" href="#">Oil</a>
+                        <a class="active" href="oil.html">Oil</a>
                     </li>
                     <li class="">
-                        <a class="" href="#">The Process</a>
+                        <a class="" href="process.html">The Process</a>
                     </li>
                     <li class="">
-                        <a class="" href="#">Ask Alex</a>
+                        <a class="" href="ask-alex.html">Ask Alex</a>
                     </li>
                     <li class="">
-                        <a class="" href="#">Hair to Toe</a>
+                        <a class="" href="hair-to-toe.html">Hair to Toe</a>
                     </li>
                     <li class="">
                         <a class="" href="#">Shop</a>
