--- a/hair-to-toe.html
+++ b/hair-to-toe.html
@@ -26,8 +26,8 @@
         <div class="banner container-fluid">
 
             <nav class="navbar navbar-expand navbar-dark flex-column">
-                <a class="navbar-brand mx-auto brand-logo" href="#">
-                    <img src="images/logo/AO_logo-wht_text.png" width="338.5" height="102.5" alt="alchemy oil logo"></a>
+                <a class="navbar-brand mx-auto brand-logo" href="index.html">
+                    <img src="images/logo/AO_logo-wht_text.png" width="338" height="102" alt="alchemy oil logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -173,27 +173,36 @@
             </div>
             <div class="verticaLine"></div>
 
+            <!-- SIDEBAR -->
             <div class="col-lg-4 col-sm-12 sidebar">
                 <div class="sidebar-bio">
-                    <img class="sidebar-bio-img" src="images/pages/about-bio/image6.png" alt="">
-                    <p>About/Contact</p>
-                    <p>Alexandria Pierce</p>
+                    <a href="about.html">
+                        <img class="sidebar-bio-img" src="images/pages/about-bio/image6.png" alt="">
+                        <p>About/Contact</p>
+                        <p>Alexandria Pierce</p>
+                    </a>
                 </div>
                 <hr>
                 <div class="sidebar-askAlex">
-                    <p>Ask Alex</p>
+                    <a href="ask-alex.html">
+                        <p>Ask Alex</p>
+                    </a>
                 </div>
                 <hr>
                 <div class="sidebar-aboutOil">
-                    <p>About The Oil</p>
+                    <a href="oil.html">
+                        <p>About The Oil</p>
+                    </a>
                 </div>
                 <hr>
                 <div class="sidebar-journey">
-                    <img class="sidebar-journey-img"
-                        src="images/posts/journey/Happy afro woman with eyes closed besides a graffiti wall.png" alt="">
-                    <p>The Journey</p>
-                    <p id="sidebar-paragraph">This is a place to highlight and celebrate all hair. Our hair is so
-                        unique, we can do so much to it and with it!</p>
+                    <a href="hair-journey.html">
+                        <img class="sidebar-journey-img"
+                            src="images/posts/journey/Happy afro woman with eyes closed besides a graffiti wall.png" alt="">
+                        <p>The Journey</p>
+                        <p id="sidebar-paragraph">This is a place to highlight and celebrate all hair. Our hair is so unique, we can
+                            do so much to it and with it!</p>
+                    </a>
                 </div>
                 <hr>
                 <div class="sidebar-follow">
@@ -214,23 +223,22 @@
                 <hr>
                 <div class="sidebar-disclaimer">
                     <p>Disclaimer</p>
-                    <p id="sidebar-paragraph">All images submitted and uploaded are consenting images submitted by
-                        subscribers and, therefore, relieve Alchemy Oil of
-                        any legal responsibility. You consented to having images and text posted to the site and our
-                        social media platforms when
-                        you opted to participate in a live blog. By using the site and/or submitting an image to Alchemy
-                        Oil, you state that you
-                        will not post any comments, links or other materials on the site that may be inappropriate in
-                        nature per Alchemy Oil’s
-                        sole discretion. This means that any comments/materials you submit must not be inappropriate,
-                        abusive or otherwise
-                        offensive. Alchemy Oil reserves the right, in its sole discretion, without notice, to remove any
-                        content that does not
-                        adhere to these Terms of Use. The Alchemists are dedicated to creating a positive and uplifting
-                        destination for all
+                    <p id="sidebar-paragraph">All images submitted and uploaded are consenting images submitted by subscribers and,
+                        therefore, relieve Alchemy Oil of
+                        any legal responsibility. You consented to having images and text posted to the site and our social media
+                        platforms when
+                        you opted to participate in a live blog. By using the site and/or submitting an image to Alchemy Oil, you
+                        state that you
+                        will not post any comments, links or other materials on the site that may be inappropriate in nature per
+                        Alchemy Oil’s
+                        sole discretion. This means that any comments/materials you submit must not be inappropriate, abusive or
+                        otherwise
+                        offensive. Alchemy Oil reserves the right, in its sole discretion, without notice, to remove any content
+                        that does not
+                        adhere to these Terms of Use. The Alchemists are dedicated to creating a positive and uplifting destination
+                        for all
                         women.</p>
                 </div>
-
             </div>
         </div>
     </section>
@@ -239,12 +247,14 @@
         <h3>Archives Ask Alex</h3>
         <div class="row">
             <div class="col archive-post ">
-                <img src="images/posts/ask-alex/image2.png" alt="">
-                <h2>Title of Post</h2>
+                <a href="ask-alex-posts.html"> <img src="images/posts/ask-alex/image2.png" alt="">
+                    <h2>Title of Post</h2>
+                </a>
             </div>
             <div class="col archive-post">
-                <img src="images/posts/ask-alex/post2/image4.png" alt="">
-                <h2>Title of Post</h2>
+                <a href="ask-alex-posts.html"><img src="images/posts/ask-alex/post2/image4.png" alt="">
+                    <h2>Title of Post</h2>
+                </a>
             </div>
             <div class="col archive-post">
                 <img src="images/posts/ask-alex/post3/post3-archives.png" alt="">
@@ -267,11 +277,13 @@
                 <h2>Title of Post</h2>
             </div>
         </div>
-        <h3>Archives Head to Toe</h3>
+    
+        <h3>Archives Hair to Toe</h3>
         <div class="row">
             <div class="col archive-post">
-                <a href="hair-to-toe-post.html"><img src="images/posts/hair-toe/hairtoe-post1-archive.png" alt=""></a>
-                <h2>Title of Post</h2>
+                <a href="hair-to-toe-post.html"> <img src="images/posts/hair-toe/hairtoe-post1-archive.png" alt="">
+                    <h2>Title of Post</h2>
+                </a>
             </div>
             <div class="col archive-post">
                 <img src="images/posts/hair-toe/post2/post2-archives.png" alt="">
@@ -304,47 +316,50 @@
     <footer class="footer">
         <div class="row">
             <div class="col footer-about cols-footer">
-                <p id="footer-p">About Us</p>
-                <p class="footer-about-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                    officia deserunt mollit anim id est eopksio laborum.
-                    Learn more</p>
+                <a href="about.html">
+                    <p id="footer-p">About Us</p>
+                    <p class="footer-about-content">Why did we create Alchemy Oil? <br>
+                        After losing faith in the many hair products on the market that claim to be all natural, we began
+                        experimenting...
+                    </p>
+                </a>
             </div>
             <div class="col footer-nav cols-footer">
-                <ul class="">
-                    <li class=""">
-                        <a class=" active" href="#">Oil</a>
+                <ul>
+                    <li>
+                        <a class="active" href="oil.html">Oil</a>
                     </li>
-                    <li class="">
-                        <a class="" href="#">The Process</a>
+                    <li>
+                        <a class="" href="process.html">The Process</a>
                     </li>
-                    <li class="">
-                        <a class="" href="#">Ask Alex</a>
+                    <li>
+                        <a class="" href="ask-alex-posts.html">Ask Alex</a>
                     </li>
-                    <li class="">
-                        <a class="" href="#">Hair to Toe</a>
+                    <li>
+                        <a class="" href="hair-to-toe.html">Hair to Toe</a>
                     </li>
-                    <li class="">
+                    <li>
                         <a class="" href="#">Shop</a>
                     </li>
                 </ul>
             </div>
             <div class="col footer-policy cols-footer">
                 <ul>
-                    <li>FAQ</li>
+                    <a href="faq.html">
+                        <li>FAQ</li>
+                    </a>
                     <li>Privacy Policy</li>
                     <li>Terms and Conditions</li>
                 </ul>
-
             </div>
             <div class="col footer-contact cols-footer">
                 <p id="footer-p">Contact</p>
-                <p>235-4586-269</p>
-                <p>info@alchemy-oil.com</p>
-                <p></p>
+                <p>510-604-1006</p>
+                <p><a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a></p>
             </div>
             <div class="col footer-socialmedia">
                 <p id="footer-p">Follow Us</p>
-                <div class="row row-cols-2 rows-footer-icons">
+                <div class="row rows-footer-icons">
                     <div class="col">
                         <a class="footer-links" href="" target="_blank">
                             <i class="fab fa-facebook-f"></i>
