--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
         <div class="banner container-fluid">
 
             <nav class="navbar navbar-expand navbar-dark flex-column">
-                <a class="navbar-brand mx-auto brand-logo" href="#">
-                    <img src="images/logo/AO_logo-wht_text.png" width="338.5" height="102.5" alt="alchemy oil logo"></a>
+                <a class="navbar-brand mx-auto brand-logo" href="index.html">
+                    <img src="images/logo/AO_logo-wht_text.png" width="338" height="102" alt="alchemy oil logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -128,11 +128,9 @@
 
                 <div class="contact">
                     <h1>Contact Me</h1>
-                    <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est eopksio laborum.
-                    Sed ut perspiciatis unde omnis istpoe natus error sit voluptatem.
-                    </p>
+                    <p>Need copy blurb, or should we remove it.</p>
                     <p>510-604-1006</p>
-                    <p>info@alchemy-oil.com</p>
+                    <p><a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a></p>
                     <p></p>
                 </div>
 
@@ -149,12 +147,14 @@
         <h3>Archives Ask Alex</h3>
         <div class="row">
             <div class="col archive-post ">
-                <img src="images/posts/ask-alex/image2.png" alt="">
-                <h2>Title of Post</h2>
+                <a href="ask-alex-posts.html"> <img src="images/posts/ask-alex/image2.png" alt="">
+                    <h2>Title of Post</h2>
+                </a>
             </div>
             <div class="col archive-post">
-                <img src="images/posts/ask-alex/post2/image4.png" alt="">
-                <h2>Title of Post</h2>
+                <a href="ask-alex-posts.html"><img src="images/posts/ask-alex/post2/image4.png" alt="">
+                    <h2>Title of Post</h2>
+                </a>
             </div>
             <div class="col archive-post">
                 <img src="images/posts/ask-alex/post3/post3-archives.png" alt="">
@@ -177,11 +177,13 @@
                 <h2>Title of Post</h2>
             </div>
         </div>
-        <h3>Archives Head to Toe</h3>
+    
+        <h3>Archives Hair to Toe</h3>
         <div class="row">
             <div class="col archive-post">
-                <img src="images/posts/hair-toe/hairtoe-post1-archive.png" alt="">
-                <h2>Title of Post</h2>
+                <a href="hair-to-toe-post.html"> <img src="images/posts/hair-toe/hairtoe-post1-archive.png" alt="">
+                    <h2>Title of Post</h2>
+                </a>
             </div>
             <div class="col archive-post">
                 <img src="images/posts/hair-toe/post2/post2-archives.png" alt="">
@@ -214,47 +216,50 @@
     <footer class="footer">
         <div class="row">
             <div class="col footer-about cols-footer">
-                <p id="footer-p">About Us</p>
-                <p class="footer-about-content">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                    officia deserunt mollit anim id est eopksio laborum.
-                    Learn more</p>
+                <a href="about.html">
+                    <p id="footer-p">About Us</p>
+                    <p class="footer-about-content">Why did we create Alchemy Oil? <br>
+                        After losing faith in the many hair products on the market that claim to be all natural, we began
+                        experimenting...
+                    </p>
+                </a>
             </div>
             <div class="col footer-nav cols-footer">
-                <ul class="">
-                    <li class=""">
-                        <a class=" active" href="#">Oil</a>
+                <ul>
+                    <li>
+                        <a class="active" href="oil.html">Oil</a>
                     </li>
-                    <li class="">
-                        <a class="" href="#">The Process</a>
+                    <li>
+                        <a class="" href="process.html">The Process</a>
                     </li>
-                    <li class="">
-                        <a class="" href="#">Ask Alex</a>
+                    <li>
+                        <a class="" href="ask-alex-posts.html">Ask Alex</a>
                     </li>
-                    <li class="">
-                        <a class="" href="#">Hair to Toe</a>
+                    <li>
+                        <a class="" href="hair-to-toe.html">Hair to Toe</a>
                     </li>
-                    <li class="">
+                    <li>
                         <a class="" href="#">Shop</a>
                     </li>
                 </ul>
             </div>
             <div class="col footer-policy cols-footer">
                 <ul>
-                    <li>FAQ</li>
+                    <a href="faq.html">
+                        <li>FAQ</li>
+                    </a>
                     <li>Privacy Policy</li>
                     <li>Terms and Conditions</li>
                 </ul>
-
             </div>
             <div class="col footer-contact cols-footer">
                 <p id="footer-p">Contact</p>
-                <p>235-4586-269</p>
-                <p>info@alchemy-oil.com</p>
-                <p></p>
+                <p>510-604-1006</p>
+                <p><a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a></p>
             </div>
             <div class="col footer-socialmedia">
                 <p id="footer-p">Follow Us</p>
-                <div class="row row-cols-2 rows-footer-icons">
+                <div class="row rows-footer-icons">
                     <div class="col">
                         <a class="footer-links" href="" target="_blank">
                             <i class="fab fa-facebook-f"></i>
